# Glauber

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  config.yaml  main.cc  parallel
include/: Config.h  Glauber.h  GlauberMC.h  Integration.h  KeyMap.h  Nucleus.h  NucleusData.h  Position.h  Profile.h  Random.h
src/: Config.cc  Glauber.cc  GlauberMC.cc  Nucleus.cc  Position.cc  Profile.cc  Random.cc
tool/: README.md  en_nch.py  lr_dist.py  nch_dist.py  npart_ncoll_b.py  template.py
tool/util/: __init__.py  centrality.py  histogram.py  parser.py
